バリデーション追加

--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -10,7 +10,7 @@
             <%= render "public/favorites/favorite", post: post %>
           <% else %>
             <p class="text-center">
-              <i class="fa-solid fa-heart"></i>
+              <i class="fa-regular fa-heart"></i>
               <%= post.favorites.count %>
             </p>
           <% end %>
