--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -40,10 +40,15 @@
       <div class="card">
         <%= image_tag @post.outfit_image, class: "outfit_image_show" %>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">
-            <div id="favorite_buttons_<%= @post.id %>">
+          <li class="list-group-item" id="favorite_buttons_<%= @post.id %>">
+            <% if member_signed_in? %>
               <%= render "public/favorites/favorite", post: @post %>
-            </div>
+            <% else %>
+              <p class="text-center">
+                <i class="fa-regular fa-heart"></i>
+                <%= @post.favorites.count %>
+              </p>
+            <% end %>
           </li>
           <div id="post_comments_<%= @post.id %>">
             <%= render "public/post_comments/comment", post: @post, post_comment_new: @post_comment_new %>
