--- a/app/views/public/members/_follow.html.erb
+++ b/app/views/public/members/_follow.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <% members.each do |member| %>
       <div class="col-md-6">
-        <li id="member_list" class="d-flex justify-content-between align-items-center">
+        <li id="member_list" class="d-flex justify-content-between align-items-center card-effect">
           <div class="member_info d-flex">
             <div class="profile_image_index">
               <%= link_to member_path(member) do %>
