--- a/app/views/admin/members/show.html.erb
+++ b/app/views/admin/members/show.html.erb
@@ -62,7 +62,7 @@
     <% else %>
       <% @member_posts.each do |post| %>
         <div class="col-md-3 g-5">
-          <div class="card">
+          <div class="card card-effect">
             <%= link_to admin_post_path(post) do %>
               <%= image_tag post.outfit_image, class: "outfit_image_index" %>
             <% end %>
