--- a/app/views/public/members/_index.html.erb
+++ b/app/views/public/members/_index.html.erb
@@ -1,5 +1,5 @@
 <% members.each do |member| %>
-  <li id="member_list" class="d-flex justify-content-between align-items-center">
+  <li id="member_list" class="d-flex justify-content-between align-items-center card-effect">
     <div class="member_info d-flex">
       <div class="profile_image_index">
         <%= link_to member_path(member) do %>
