--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -34,9 +34,14 @@
       <%= yield %>
     </main>
 
-    <footer>
-
+    <footer id="footer">
+      <p id="page-top"><a href="#">Topへ</a></p>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-facebook"></i>
+      <p class="text-center">&copy; copyright.</p>
     </footer>
+
     <script>
       var elements = document.getElementsByClassName('search_form')
       Array.prototype.forEach.call(elements, function(element){
