--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -19,7 +19,7 @@
         <div class="row">
           <!--性別選択-->
           <div class="col-md-3 gender-nav">
-            <nav>
+            <nav id="sidebar">
               <section class="gender">
                 <h2 class="title">一覧</h2>
                 <ul class="m-0">
