--- a/app/views/public/homes/_top.html.erb
+++ b/app/views/public/homes/_top.html.erb
@@ -19,7 +19,7 @@
         <div class="row">
           <!--性別選択-->
           <div class="col-md-3">
-            <nav>
+            <nav id="sidebar">
               <h2 class="title">探す</h2>
               <ul>
                 <li class="pb-2"><%= link_to "コーディネートを探す", posts_path %></li>
