--- a/app/views/public/members/men.html.erb
+++ b/app/views/public/members/men.html.erb
@@ -19,7 +19,7 @@
         <div class="row">
           <!--性別選択-->
           <div class="col-lg-3 gender-nav">
-            <nav>
+            <nav id="sidebar">
               <h2 class="title">性別</h2>
               <ul class="m-0">
                 <li class="py-2"><%= link_to "ALL", members_path %></li>
