--- a/app/views/public/posts/search.html.erb
+++ b/app/views/public/posts/search.html.erb
@@ -18,7 +18,7 @@
         <div class="row">
           <!--性別選択-->
           <div class="col-md-3 gender-nav">
-            <nav>
+            <nav id="sidebar">
               <section class="gender pb-3">
                 <h2 class="title">性別</h2>
                 <ul class="m-0">
