--- a/app/views/public/tags/tag_posts.html.erb
+++ b/app/views/public/tags/tag_posts.html.erb
@@ -22,8 +22,8 @@
             <nav id="sidebar">
               <section class="gender pb-3">
                 <h2 class="title">性別</h2>
-                <ul class="m-0">
-                  <li class="py-2"><%= link_to "ALL", posts_path %></li>
+                <ul class="m-0 ">
+                  <li class="py-2 current"><%= link_to "ALL", posts_path %></li>
                   <li class="py-2"><%= link_to "MEN", men_posts_path %></li>
                   <li class="py-2"><%= link_to "WOMEN", women_posts_path %></li>
                 </ul>
