--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -36,9 +36,11 @@
 
     <footer id="footer">
       <p id="page-top"><a href="#">Topへ</a></p>
-      <i class="fa-brands fa-instagram"></i>
-      <i class="fa-brands fa-twitter"></i>
-      <i class="fa-brands fa-facebook"></i>
+      <div id="sns-icon">
+        <div class="me-3"><i class="fa-brands fa-instagram"></i></div>
+        <div class="me-3"> <i class="fa-brands fa-twitter"></i></div>
+        <div><i class="fa-brands fa-facebook"></i></div>
+      </div>
       <p class="text-center">&copy; copyright.</p>
     </footer>
 
