--- a/app/views/public/members/followings.html.erb
+++ b/app/views/public/members/followings.html.erb
@@ -19,9 +19,15 @@
           </div>
           <% if @member == current_member %>
             <div class="btn_area d-flex justify-content-between mt-3">
-              <%= link_to "プロフィール変更", edit_member_path(@member), class: "btn btn-secondary" %>
-              <%= link_to "コーディネート登録", new_post_path, class: "btn btn-primary" %>
-              <%= link_to "退会について", withdraw_confirm_member_path(@member), class: "btn btn-danger" %>
+              <%= link_to edit_member_path(@member), class: "secondary-btn bg-gray" do %>
+                <span>プロフィール編集</span>
+              <% end %>
+              <%= link_to new_post_path, class: "primary-btn bg-blue" do %>
+                <span>コーディネート登録</span>
+              <% end %>
+              <%= link_to withdraw_confirm_member_path(@member), class: "danger-btn bg-red" do %>
+                <span>退会について</span>
+              <% end %>
             </div>
           <% else %>
             <div id="follow_btn_<%= @member.id %>" class="mt-3 ms-3">
