--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -20,8 +20,12 @@
           </div>
           <% if @post.member == current_member %>
             <div class="btn_area d-flex justify-content-between mt-3">
-              <%= link_to "編集", edit_post_path(@post), class: "btn btn-secondary me-2" %>
-              <%= link_to "削除", post_path(@post), method: :delete, data: {confirm: "本当に削除しますか？"}, class: "btn btn-danger" %>
+              <%= link_to edit_post_path(@post), class: "secondary-btn bg-gray me-2" do %>
+                <span>編集</span>
+              <% end %>
+              <%= link_to post_path(@post), method: :delete, data: {confirm: "本当に削除しますか？"}, class: "danger-btn bg-red" do %>
+                <span>削除</span>
+              <% end %>
             </div>
           <% else %>
             <div id="follow_btn_<%= @post.member.id %>" class="mt-3 ms-3">
@@ -89,4 +93,28 @@
   </div>
 </div>
 
+
+
+
+
+<div class="wrapper">
+  <ul class="tab m-0 p-0">
+    <li><a href="#user-search">ユーザー</a></li>
+    <li><a href="#coodinate-search">コーディネート</a></li>
+  </ul>
+
+  <div id="user-search" class="area">
+    <!--検索フォーム-->
+    <%= search_form_for @q, url: search_members_path, class: "d-flex search_form" do |f| %>
+      <%= f.search_field :name_cont, class: "form-control me-2", placeholder: "ユーザーを探す" , autocomplete: 'off'%>
+      <%= f.submit "検索", class: "btn btn-outline-success" %>
+    <% end %>
+  </div>
+  <div id="coodinate-search" class="area">
+    <%= search_form_for @search_post, url: search_posts_path, class: "d-flex search_form" do |f| %>
+      <%= f.search_field :tags_name_cont, class: "form-control me-2", placeholder: "コーディネートを探す",  autocomplete: 'off'%>
+      <%= f.submit "検索", class: "btn btn-outline-success" %>
+    <% end %>
+  </div>
+</div>
 
