--- a/app/views/public/members/edit.html.erb
+++ b/app/views/public/members/edit.html.erb
@@ -1,3 +1,6 @@
+<!--エラーメッセージ-->
+<%= render "layouts/error", model: @member %>
+
 <header id="title_top">
   <div class="container">
     <div class="row">
