--- a/app/views/public/post_comments/_comment.html.erb
+++ b/app/views/public/post_comments/_comment.html.erb
@@ -44,7 +44,7 @@
           <%= f.text_area :comment, rows: '1', placeholder: "コメントを書く", class: "form-control d-grid comment-form" %>
         </div>
         <div class="col-1">
-          <%= f.submit "送信", class: "btn btn-secondary" %>
+          <%= f.submit "送信", class: "btn btn-outline-secondary" %>
         </div>
       </div>
     </li>
