--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -709,6 +709,7 @@
 }
 
 // 検索フォーム
+
 .open-btn{
   width: 40px;
   height: 40px;
@@ -729,14 +730,14 @@
 
 .tab li a{
   display: block;
-  margin: 0 2px;
   padding: 10px 20px;
 }
 /*liにactiveクラスがついた時の形状*/
 .tab li.active a{
   background:#fff;
-  border: 1px #ddd solid;
-  border-bottom: none;
+  border-top: 1px #ddd solid;
+  border-right: 1px #ddd solid;
+  border-left: 1px #ddd solid;
 }
 
 
@@ -751,10 +752,10 @@
 
 /*areaにis-activeというクラスがついた時の形状*/
 .area.is-active {
-    display: block;/*表示*/
-    animation-name: displayAnime;/*ふわっと表示させるためのアニメーション*/
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
+  display: block;/*表示*/
+  animation-name: displayAnime;/*ふわっと表示させるためのアニメーション*/
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
 }
 
 @keyframes displayAnime{
