--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -18,18 +18,7 @@
     </header>
     <main>
       <!--フラッシュメッセージ-->
-      <% if flash[:notice] %>
-        <div id="notice" class="alert alert-success alert-dismissible fade show m-0" data-bs-dismiss="alert">
-          <%= notice %>
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-       <% end %>
-       <% if flash[:alert] %>
-        <div id="alert" class="alert alert-danger alert-dismissible fade show m-0" data-bs-dismiss="alert">
-          <%= alert %>
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-       <% end %>
+      <%= render "layouts/flash" %>
 
       <%= yield %>
     </main>
